--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@fullcalendar/interaction": "^5.9.0",
     "@fullcalendar/list": "^5.9.0",
     "@fullcalendar/timegrid": "^5.9.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -19,6 +21,7 @@
     "graphql": "^15.5.1",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
+    "notistack": "^1.0.10",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-copy-to-clipboard": "^5.0.4",
