--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "notistack": "^1.0.10",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-beautiful-dnd": "^13.1.0",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
