--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "antd": "^4.16.11",
     "apexcharts": "^3.27.3",
     "axios": "^0.21.4",
+    "classnames": "^2.3.1",
     "graphql": "^15.6.0",
     "moment": "^2.29.1",
     "notistack": "^1.0.10",
